@@ -1,19 +1,17 @@
-from simpleapi import wrappers, Wrapper
+from simpleapi import wrappers, DefaultWrapper
 
 from message import Message
 
-class MessageWrapper(Wrapper):
-    def build(self):
-        if isinstance(self.result, Message):
-            result = self.result
-        else:
-            result = Message(self.result)
+class MessageWrapper(DefaultWrapper):
+    def build(self, result, errors):
+        if not isinstance(result, Message):
+            result = Message(result)
 
-        if self.errors:
+        if errors:
             result.success = False
         else:
             result.success = True
 
-        result._errors = self.errors
+        result._errors = errors
         return result
 wrappers.register('message', MessageWrapper)
