@@ -1,21 +1,24 @@
 # -*- coding: utf-8 -*-
 
-from simpleapi.message.common import json
+from simpleapi.message.common import json, SAException
 from response import UnformattedResponse
 
 __all__ = ('Namespace', 'NamespaceException')
 
-class NamespaceException(Exception): pass
+class NamespaceException(SAException): pass
 class Namespace(object):
 
     def __init__(self, request):
         self.request = request
         self.session = request.session
 
-    def error(self, errors):
+    def error(self, *errors):
+        errors = list(errors)
+        if len(errors) == 1:
+            errors = errors[0]
         raise NamespaceException(errors)
 
-    def introspect(self, framework='default'):
+    def introspect(self, framework='default', provider='Ext.app', namespace=None):
         if framework not in ['default', 'extjsdirect']:
             self.error('Framework unknown.')
 
@@ -25,10 +28,17 @@ class Namespace(object):
         function_map = self.request.route.nmap[version]['functions']
         
         for fn in function_map.iterkeys():
+            if fn in ['introspect', ]: continue
+            
+            if len(function_map[fn]['args']['all']) > 0:
+                fnlen = 1
+            else:
+                fnlen = 0
+            
             functions.append({
                 'name': fn,
-                'len': len(function_map[fn]['args']['obligatory']),
-                'formHandler': False,
+                'len': fnlen,
+                'formHandler': True,
             })
 
         result = {
@@ -38,8 +48,14 @@ class Namespace(object):
         }
 
         if framework == 'extjsdirect':
+            result['type'] = 'remoting'
+            result['url'] = u'%s?_wrapper=extjsdirect' % \
+                self.session.request.path_info
+            if namespace:
+                result['namespace'] = namespace
             return UnformattedResponse(
-                content=u'Ext.app.REMOTING_API = %s' % json.dumps(result),
+                content=u'%s.REMOTING_API = %s;' %\
+                    (provider, json.dumps(result)),
                 mimetype='text/javascript'
             )
 
